--- a/Angular/src/app/led/led.component.html
+++ b/Angular/src/app/led/led.component.html
@@ -5,9 +5,51 @@
     <div class="row">
         <div class="col">
             <div class="d-grid gap-2">
-                
                     <input (click)="enviar()" type="submit" [value]="status"  class="btn btn-primary border-0" id="color">
-                
+              </div>
+              <div>
+
+
+
+
+                <div class="row mt-5">
+
+                </div>
+                <div class="row mt-2">
+                    <div class="col">
+                        <div class="d-grid gap-2">
+                            <input (click)="Adelante()" type="submit" [value]="delante"  class="btn btn-primary border-0" id="color">
+                        </div>
+                      </div>
+                </div>
+                <div class="row mt-2">
+                    <div class="col">
+                        <div class="d-grid gap-2">
+                            <input (click)="Izquierda()" type="submit" [value]="izquieda"  class="btn btn-primary border-0" id="color">
+                        </div>
+                      </div>
+                      <div class="col">
+                        <div class="d-grid gap-2">
+                            <input (click)="Stop()" type="submit" [value]="stop"  class="btn btn-primary border-0" id="color">
+                        </div>
+                      </div>
+                      <div class="col">
+                        <div class="d-grid gap-2">
+                            <input (click)="Derecha()" type="submit" [value]="derecha"  class="btn btn-primary border-0" id="color">
+                        </div>
+                      </div>
+                </div>
+                <div class="row mt-2">
+                    <div class="col">
+                        <div class="d-grid gap-2">
+                            <input (click)="Reversa()" type="submit" [value]="reversa"  class="btn btn-primary border-0" id="color">
+                        </div>
+                      </div>
+                </div>
+
+
+
+
               </div>
         </div>
         <div class="col">
